index-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-deployment
  namespace: mgnifybranchwater-hl-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: index
  template:
    metadata:
      labels:
        app: index
    spec:
      containers:
      - name: index
#        image: mgsdev/mgnify-bw-index-alpha:latest
#        image: mgsdev/mgnify-bw-index:latest
        image: mgsdev/mgnify-bw-index:latest
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: bw-db
          mountPath: /data
      volumes:
      - name: bw-db
        persistentVolumeClaim:
          claimName: complete-index-pvc
#          claimName: ucd-index-pvc
#          claimName: index-updated-sketches-pvc
