mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mgnifybranchwater-hl-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mgsdev/mgnify-bw-mongodb:latest
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: bw-db
          mountPath: /data/bw_db
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: bw-db
        persistentVolumeClaim:
          claimName: index-updated-sketches-pvc
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-updated-sketches-pvc
