app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: mgnifybranchwater-hl-prod
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
