react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: mgnifybranchwater-hl-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
    - host: branchwater-dev.mgnify.org
      http:
        paths:
          - path: /metagenomics/
            pathType: Prefix
            backend:
              service:
                name: ebi-metagenomics-client-service
                port:
                  number: 8000
